<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to adtaskEntrytask description, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- EditText for getttaskEntrytask description input -->
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="5dp"
        android:layout_margin="5dp"

        app:srcCompat="@drawable/photo" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_task_title"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_task_description"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority_string"
        android:textColor="@android:color/primary_text_light" />

    <!-- RadioGroup for visible selection of a priority -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:checked="true"
            android:text="@string/high"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/medium"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/low"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/not"
          />

    </RadioGroup>

    <!-- Add button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/add_button"
        android:textColor="@android:color/white" />

</LinearLayout>
