<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="prb.com.altarix.EditActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etTitle"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/materialRed"
            android:checked="true"
            android:text="@string/high"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/medium"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:text="@string/low"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/not" />

    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:text="Сохранить"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDesc"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="Важность" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/btnSave"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:text="Отмена" />
</RelativeLayout>
